Generar dos fitxers pom.xml base per a qualsevol aplicació CAIB (Downgrade de les dependències de JBoss de 7.2.6  a 7.2.0) https://github.com/GovernIB/maven/issues/6