@@ -82,13 +82,13 @@ public class JSONArray {
 	/**
 	 * The arrayList where the JSONArray's properties are kept.
 	 */
-	private final ArrayList myArrayList;
+	private final ArrayList<Object> myArrayList;
 
 	/**
 	 * Construct an empty JSONArray.
 	 */
 	public JSONArray() {
-		this.myArrayList = new ArrayList();
+		this.myArrayList = new ArrayList<Object>();
 	}
 
 	/**
@@ -145,10 +145,10 @@ public class JSONArray {
 	 *
 	 * @param collection A Collection.
 	 */
-	public JSONArray(Collection collection) {
-		this.myArrayList = new ArrayList();
+	public JSONArray(Collection<Object> collection) {
+		this.myArrayList = new ArrayList<Object>();
 		if (collection != null) {
-			Iterator iter = collection.iterator();
+			Iterator<Object> iter = collection.iterator();
 			while (iter.hasNext()) {
 				this.myArrayList.add(JSONObject.wrap(iter.next()));
 			}
@@ -540,7 +540,7 @@ public class JSONArray {
 	 * @param value A Collection value.
 	 * @return this.
 	 */
-	public JSONArray put(Collection value) {
+	public JSONArray put(Collection<Object> value) {
 		this.put(new JSONArray(value));
 		return this;
 	}
@@ -553,7 +553,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(double value) throws JSONException {
-		Double d = new Double(value);
+		Double d = Double.valueOf(value);
 		JSONObject.testValidity(d);
 		this.put(d);
 		return this;
@@ -566,7 +566,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(int value) {
-		this.put(new Integer(value));
+		this.put(Integer.valueOf(value));
 		return this;
 	}
 
@@ -577,7 +577,7 @@ public class JSONArray {
 	 * @return this.
 	 */
 	public JSONArray put(long value) {
-		this.put(new Long(value));
+		this.put(Long.valueOf(value));
 		return this;
 	}
 
@@ -588,7 +588,7 @@ public class JSONArray {
 	 * @param value A Map value.
 	 * @return this.
 	 */
-	public JSONArray put(Map value) {
+	public JSONArray put(Map<?, ?> value) {
 		this.put(new JSONObject(value));
 		return this;
 	}
@@ -630,7 +630,7 @@ public class JSONArray {
 	 * @return this.
 	 * @throws JSONException If the index is negative or if the value is not finite.
 	 */
-	public JSONArray put(int index, Collection value) throws JSONException {
+	public JSONArray put(int index, Collection<Object> value) throws JSONException {
 		this.put(index, new JSONArray(value));
 		return this;
 	}
@@ -645,7 +645,7 @@ public class JSONArray {
 	 * @throws JSONException If the index is negative or if the value is not finite.
 	 */
 	public JSONArray put(int index, double value) throws JSONException {
-		this.put(index, new Double(value));
+		this.put(index, Double.valueOf(value));
 		return this;
 	}
 
@@ -659,7 +659,7 @@ public class JSONArray {
 	 * @throws JSONException If the index is negative.
 	 */
 	public JSONArray put(int index, int value) throws JSONException {
-		this.put(index, new Integer(value));
+		this.put(index, Integer.valueOf(value));
 		return this;
 	}
 
@@ -673,7 +673,7 @@ public class JSONArray {
 	 * @throws JSONException If the index is negative.
 	 */
 	public JSONArray put(int index, long value) throws JSONException {
-		this.put(index, new Long(value));
+		this.put(index, Long.valueOf(value));
 		return this;
 	}
 
@@ -687,7 +687,7 @@ public class JSONArray {
 	 * @throws JSONException If the index is negative or if the the value is an
 	 *                       invalid number.
 	 */
-	public JSONArray put(int index, Map value) throws JSONException {
+	public JSONArray put(int index, Map<?, ?> value) throws JSONException {
 		this.put(index, new JSONObject(value));
 		return this;
 	}
